[gd_scene load_steps=2 format=3 uid="uid://6vtv2cc6amk"]

[ext_resource type="Script" uid="uid://80dddbqjbmir" path="res://Scripts/text_chat.gd" id="1_nq2ep"]

[node name="TextChat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.0
offset_top = -24.0
offset_right = -877.0
offset_bottom = -444.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nq2ep")

[node name="ChatInput" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 141.0
offset_right = 151.0
offset_bottom = 172.0
placeholder_text = "chat...."

[node name="SendButton" type="Button" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 140.0
offset_right = 220.0
offset_bottom = 171.0
text = "Send"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_top = 83.0
offset_right = 221.0
offset_bottom = 137.0

[node name="ChatLog" type="TextEdit" parent="Panel"]
layout_mode = 0
offset_right = 221.0
offset_bottom = 53.0
editable = false

[connection signal="button_down" from="SendButton" to="." method="_on_send_button_button_down"]
